// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Drawer > renders with body slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-slot="content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" data-slot="handle" class=""><span data-akar-handle-hitarea="" aria-hidden="true"></span></div><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0-0-0"></h2><p id="akar-dialog-description-v-0-0-1"></p></span>
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="body" class="">Body slot</div>
    <!--v-if-->
  </div>
</div>



<!--teleport end-->"
`;

exports[`Drawer > renders with class correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-slot="content" tabindex="-1" class="bg-elevated">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" data-slot="handle" class=""><span data-akar-handle-hitarea="" aria-hidden="true"></span></div><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0-0-0"></h2><p id="akar-dialog-description-v-0-0-1"></p></span>
  <div data-slot="container" class="">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</div>



<!--teleport end-->"
`;

exports[`Drawer > renders with content slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-slot="content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" data-slot="handle" class=""><span data-akar-handle-hitarea="" aria-hidden="true"></span></div><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0-0-0"></h2><p id="akar-dialog-description-v-0-0-1"></p></span>Content slot
</div>



<!--teleport end-->"
`;

exports[`Drawer > renders with default slot correctly 1`] = `
"Default slot
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="akar-dialog-content-v-0-0-0" role="dialog" aria-describedby="akar-dialog-description-v-0-0-2" aria-labelledby="akar-dialog-title-v-0-0-1" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-slot="content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" data-slot="handle" class=""><span data-akar-handle-hitarea="" aria-hidden="true"></span></div><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0-0-1"></h2><p id="akar-dialog-description-v-0-0-2"></p></span>
  <div data-slot="container" class="">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</div>



<!--teleport end-->"
`;

exports[`Drawer > renders with description correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-slot="content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" data-slot="handle" class=""><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <h2 id="akar-dialog-title-v-0-0-0" data-slot="title" class="">Title</h2>
      <p id="akar-dialog-description-v-0-0-1" data-slot="description" class="">Description</p>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>



<!--teleport end-->"
`;

exports[`Drawer > renders with description slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-slot="content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" data-slot="handle" class=""><span data-akar-handle-hitarea="" aria-hidden="true"></span></div><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0-0-0"></h2><!--v-if--></span>
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <!--v-if-->
      <p id="akar-dialog-description-v-0-0-1" data-slot="description" class="">Description slot</p>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>



<!--teleport end-->"
`;

exports[`Drawer > renders with direction bottom correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-slot="content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" data-slot="handle" class=""><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <h2 id="akar-dialog-title-v-0-0-0" data-slot="title" class="">Title</h2>
      <p id="akar-dialog-description-v-0-0-1" data-slot="description" class="">Description</p>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>



<!--teleport end-->"
`;

exports[`Drawer > renders with direction bottom inset correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-slot="content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" data-slot="handle" class=""><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <h2 id="akar-dialog-title-v-0-0-0" data-slot="title" class="">Title</h2>
      <p id="akar-dialog-description-v-0-0-1" data-slot="description" class="">Description</p>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>



<!--teleport end-->"
`;

exports[`Drawer > renders with direction left correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="left" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-slot="content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" data-slot="handle" class=""><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <h2 id="akar-dialog-title-v-0-0-0" data-slot="title" class="">Title</h2>
      <p id="akar-dialog-description-v-0-0-1" data-slot="description" class="">Description</p>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>



<!--teleport end-->"
`;

exports[`Drawer > renders with direction left inset correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="left" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-slot="content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" data-slot="handle" class=""><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <h2 id="akar-dialog-title-v-0-0-0" data-slot="title" class="">Title</h2>
      <p id="akar-dialog-description-v-0-0-1" data-slot="description" class="">Description</p>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>



<!--teleport end-->"
`;

exports[`Drawer > renders with direction right correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="right" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-slot="content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" data-slot="handle" class=""><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <h2 id="akar-dialog-title-v-0-0-0" data-slot="title" class="">Title</h2>
      <p id="akar-dialog-description-v-0-0-1" data-slot="description" class="">Description</p>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>



<!--teleport end-->"
`;

exports[`Drawer > renders with direction right inset correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="right" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-slot="content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" data-slot="handle" class=""><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <h2 id="akar-dialog-title-v-0-0-0" data-slot="title" class="">Title</h2>
      <p id="akar-dialog-description-v-0-0-1" data-slot="description" class="">Description</p>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>



<!--teleport end-->"
`;

exports[`Drawer > renders with direction top correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="top" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-slot="content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" data-slot="handle" class=""><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <h2 id="akar-dialog-title-v-0-0-0" data-slot="title" class="">Title</h2>
      <p id="akar-dialog-description-v-0-0-1" data-slot="description" class="">Description</p>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>



<!--teleport end-->"
`;

exports[`Drawer > renders with direction top inset correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="top" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-slot="content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" data-slot="handle" class=""><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <h2 id="akar-dialog-title-v-0-0-0" data-slot="title" class="">Title</h2>
      <p id="akar-dialog-description-v-0-0-1" data-slot="description" class="">Description</p>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>



<!--teleport end-->"
`;

exports[`Drawer > renders with footer slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-slot="content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" data-slot="handle" class=""><span data-akar-handle-hitarea="" aria-hidden="true"></span></div><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0-0-0"></h2><p id="akar-dialog-description-v-0-0-1"></p></span>
  <div data-slot="container" class="">
    <!--v-if-->
    <!--v-if-->
    <div data-slot="footer" class="">Footer slot</div>
  </div>
</div>



<!--teleport end-->"
`;

exports[`Drawer > renders with header slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-slot="content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" data-slot="handle" class=""><span data-akar-handle-hitarea="" aria-hidden="true"></span></div><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0-0-0"></h2><p id="akar-dialog-description-v-0-0-1"></p></span>
  <div data-slot="container" class="">
    <div data-slot="header" class="">Header slot</div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>



<!--teleport end-->"
`;

exports[`Drawer > renders with pohon correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-slot="content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" data-slot="handle" class="w-20"><span data-akar-handle-hitarea="" aria-hidden="true"></span></div><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0-0-0"></h2><p id="akar-dialog-description-v-0-0-1"></p></span>
  <div data-slot="container" class="">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</div>



<!--teleport end-->"
`;

exports[`Drawer > renders with title correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="--akar-snap-point-height: 0; pointer-events: auto;" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-slot="content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" data-slot="handle" class=""><span data-akar-handle-hitarea="" aria-hidden="true"></span></div><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><!--v-if--><p id="akar-dialog-description-v-0-0-1"></p></span>
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <h2 id="akar-dialog-title-v-0-0-0" data-slot="title" class="">Title</h2>
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>



<!--teleport end-->"
`;

exports[`Drawer > renders with title slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-slot="content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" data-slot="handle" class=""><span data-akar-handle-hitarea="" aria-hidden="true"></span></div><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><!--v-if--><p id="akar-dialog-description-v-0-0-1"></p></span>
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <h2 id="akar-dialog-title-v-0-0-0" data-slot="title" class="">Title slot</h2>
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>



<!--teleport end-->"
`;

exports[`Drawer > renders without handle correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-slot="content" tabindex="-1">
  <!--v-if-->
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <h2 id="akar-dialog-title-v-0-0-0" data-slot="title" class="">Title</h2>
      <p id="akar-dialog-description-v-0-0-1" data-slot="description" class="">Description</p>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>



<!--teleport end-->"
`;

exports[`Drawer > renders without overlay correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<!--v-if-->
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-slot="content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" data-slot="handle" class=""><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <h2 id="akar-dialog-title-v-0-0-0" data-slot="title" class="">Title</h2>
      <p id="akar-dialog-description-v-0-0-1" data-slot="description" class="">Description</p>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>



<!--teleport end-->"
`;
